Version 0.7.1: Fix horizontal scroll bar issue

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -42,7 +42,7 @@ section {
   border-top: 1px solid black;
   height: 100vh;
   padding: 2rem;
-  width: 100vw;
+  width: 100%;
 }
 
 ul {
@@ -60,6 +60,8 @@ a {
 #app {
   @extend .flex-container;
   flex-flow: column wrap;
+  width: 100vw;
+  max-width: 100%;
 }
 
 .dive {
@@ -70,7 +72,7 @@ a {
 
 @media (max-width: 1028px) {
   html {
-    font-size: 14px;
+    font-size: 13px;
   }
 }
 
